# f4-interview-prep

./: FRONTEND_INTEGRATION.md  README.md  supabase_schema.sql
ai-engine/: .gitignore  DEPLOYMENT_GUIDE.md  MATCHING_FIX.md  README.md  ROBUSTNESS_FIXES.md  main.py  pyproject.toml  requirements.txt  test_aptitude_generation.py  test_job_creation.py  test_matching.py
ai-engine/routers/: __init__.py  aptitude.py  jobs.py  matching.py  resume.py
ai-engine/services/: __init__.py  resume_parser.py
web-client/: README.md  package-lock.json  package.json
web-client/app/: page.tsx
web-client/app/admin/companies/: page.tsx
web-client/app/dashboard/matching/: page.tsx
web-client/app/dashboard/resume/: page.tsx
web-client/app/test-db/: page.tsx
web-client/utils/supabase/: admin.ts
